--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=SimpleWebApp
 server.port=9000
+
+spring.datasource.url=jdbc:h2:mem:spring
+spring.datasource.driver-class-name=org.h2.Driver
